Compiler/fasto/tests/not_neg1.err
Type error: In Not: The subexpression type is not a boolean: char at line 2, column 17