Compiler/fasto/tests/not_neg1.fo
fun int main () = 
  let w = write(not 'b') in 0